# mpid_messaging

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  index.html
0.0.4/: search-index.js
0.0.4/cbor/: struct.Items.html
0.0.4/mpid_messaging/: constant.MAX_BODY_SIZE.html  constant.MAX_INBOX_SIZE.html  constant.MAX_OUTBOX_SIZE.html  enum.MpidMessageWrapper.html  fn.mpid_header_name.html
0.0.4/regex/: enum.CaptureNames.html  struct.RegexSplits.html  struct.RegexSplitsN.html
0.1.0/: search-index.js
0.1.0/aho_corasick/: struct.Matches.html
0.1.0/rand/: struct.AsciiGenerator.html  struct.Generator.html
0.1.0/regex/: enum.CaptureNames.html  struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.SubCaptures.html  struct.SubCapturesPos.html
0.2.0/: index.html  search-index.js
0.2.0/aho_corasick/: struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
0.2.0/rand/: struct.AsciiGenerator.html  struct.Generator.html
0.2.0/regex/: struct.RegexSplitsN.html  struct.SetMatchesIntoIter.html  struct.SubCaptures.html  struct.SubCapturesNamed.html
latest/aho_corasick/: struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
latest/cbor/: struct.DecodedItems.html  struct.Items.html
latest/mpid_messaging/: constant.MAX_HEADER_METADATA_SIZE.html  struct.MpidHeader.html
latest/regex/: struct.FindCaptures.html  struct.FindMatches.html  struct.SetMatchesIter.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
master/: search-index.js
master/aho_corasick/: struct.Matches.html  (+3 more)
src/: error.rs  lib.rs  mpid_header.rs  mpid_message.rs  mpid_message_wrapper.rs
(+80 files in other folders)
